added author and modified some other stuff

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/acasey98/AcmeExplosives.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Austin Casey",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/acasey98/AcmeExplosives/issues"
